completed random number generator functions

--- a/PowerPlay - 1/PowerPlay - 1/PowerPlay - 1.vcxproj.filters
+++ b/PowerPlay - 1/PowerPlay - 1/PowerPlay - 1.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="PowerPlay - 1.cpp">
+    <ClCompile Include="source.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
